Changed white colour tone

--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -4,29 +4,59 @@
 
 <div class="slides-container">
  <picture class="slide-pic">
-  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-1-mobile.jpg" />
+  <source
+   media="(max-width:500px)"
+   srcset="/assets/hero-slides/slide-1-mobile.jpg"
+  />
   <source srcset="/assets/hero-slides/slide-1.jpg" />
-  <img src="/assets/hero-slides/slide-1.jpg" alt="slide-1" />
+  <img
+   src="/assets/hero-slides/slide-1.jpg"
+   alt="slide-1"
+  />
  </picture>
  <picture class="slide-pic">
-  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-2-mobile.jpg" />
+  <source
+   media="(max-width:500px)"
+   srcset="/assets/hero-slides/slide-2-mobile.jpg"
+  />
   <source srcset="/assets/hero-slides/slide-2.jpg" />
-  <img src="/assets/hero-slides/slide-2.jpg" alt="slide-2" />
+  <img
+   src="/assets/hero-slides/slide-2.jpg"
+   alt="slide-2"
+  />
  </picture>
  <picture class="slide-pic">
-  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-3-mobile.jpg" />
+  <source
+   media="(max-width:500px)"
+   srcset="/assets/hero-slides/slide-3-mobile.jpg"
+  />
   <source srcset="/assets/hero-slides/slide-3.jpg" />
-  <img src="/assets/hero-slides/slide-3.jpg" alt="slide-3" />
+  <img
+   src="/assets/hero-slides/slide-3.jpg"
+   alt="slide-3"
+  />
  </picture>
  <picture class="slide-pic">
-  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-4-mobile.jpg" />
+  <source
+   media="(max-width:500px)"
+   srcset="/assets/hero-slides/slide-4-mobile.jpg"
+  />
   <source srcset="/assets/hero-slides/slide-4.jpg" />
-  <img src="/assets/hero-slides/slide-4.jpg" alt="slide-4" />
+  <img
+   src="/assets/hero-slides/slide-4.jpg"
+   alt="slide-4"
+  />
  </picture>
  <picture class="slide-pic">
-  <source media="(max-width:500px)" srcset="/assets/hero-slides/slide-5-mobile.jpg" />
+  <source
+   media="(max-width:500px)"
+   srcset="/assets/hero-slides/slide-5-mobile.jpg"
+  />
   <source srcset="/assets/hero-slides/slide-5.jpg" />
-  <img src="/assets/hero-slides/slide-5.jpg" alt="slide-5" />
+  <img
+   src="/assets/hero-slides/slide-5.jpg"
+   alt="slide-5"
+  />
  </picture>
  <!-- <img src="/assets/hero-slides/slide-2.jpg" alt="slide-2" />
  <img src="/assets/hero-slides/slide-3.jpg" alt="slide-3" />
@@ -35,12 +65,12 @@
 
  <div class="container">
   <div class="title">
-   <h2>THE ART OF</h2>
-   <h1>REFLAIR</h1>
+   <h2 class="text-white">THE ART OF</h2>
+   <h1 class="text-white">REFLAIR</h1>
    <div class="line-element"></div>
   </div>
 
-  <span class="des text-md relative sm:text-xl">
+  <span class="des text-md relative text-white sm:text-xl">
    Loads of inspiration to make any interior seem fresh and updated again</span
   >
   <a
