--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -9,18 +9,34 @@
  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
   <div class="sm:gap-22 grid items-center justify-center gap-12 sm:grid-cols-3 xl:gap-28">
    <div class="col-span-1 flex justify-center">
-    <img class="w-48 sm:w-80" src="assets/change-is-here-dark.png" alt="Change is here" />
+    <img
+     class="w-48 sm:w-80"
+     src="assets/change-is-here-dark.png"
+     alt="Change is here"
+    />
    </div>
 
    <div class="col-span-1 mx-auto text-center">
-    <img width="100" src="/assets/logo-inverted.webp" alt="Reflair logo" />
+    <img
+     width="100"
+     src="/assets/logo-inverted.webp"
+     alt="Reflair logo"
+    />
    </div>
    <div class="col-span-1 flex flex-col items-center justify-center gap-2">
-    <a class="text-center text-xl font-bold" href="/contact">Get in Touch</a>
-    <p class="text-center text-lg">Menlo Park, Pretoria</p>
-    <p class="text-center text-lg"><a href="tel:0835068001">083 506 8001</a></p>
-    <a class="text-center text-lg underline" href="mailto:mia@reflair.co.za">mia@reflair.co.za</a>
-    <p class="text-center text-lg">Menlo Park, Pretoria</p>
+    <a
+     class="text-center text-xl font-bold text-white"
+     href="/contact"
+     >Get in Touch</a
+    >
+    <p class="text-center text-lg text-white">Menlo Park, Pretoria</p>
+    <p class="text-center text-lg text-white"><a href="tel:0835068001">083 506 8001</a></p>
+    <a
+     class="text-center text-lg text-white underline"
+     href="mailto:mia@reflair.co.za"
+     >mia@reflair.co.za</a
+    >
+    <p class="text-center text-lg text-white">Menlo Park, Pretoria</p>
     <!-- Instagram SVG -->
     <a
      href="https://www.instagram.com/mia_reflairinteriors/"
@@ -28,7 +44,7 @@
      rel="noopener noreferrer"
     >
      <svg
-      class="flex-no-shrink h-12 w-12 fill-current"
+      class="flex-no-shrink h-12 w-12 fill-white"
       viewBox="0 0 256 256"
       xmlns="http://www.w3.org/2000/svg"
       ><path
