--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -2,7 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout description="Our services" title="Services · Reflair">
+<Layout
+ description="Our services"
+ title="Services · Reflair"
+>
  <div class="services-img"></div>
  <section class="py-12 sm:py-12">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
@@ -11,38 +14,38 @@ import Layout from '../layouts/Layout.astro';
     <div class="w-20 border-b-2 border-b-white"></div>
    </div>
    <div>
-    <p class="my-10 text-2xl">
+    <p class="my-10 text-2xl text-white">
      Let me know if I could assist with any of the following services, in order to help you create a
      functional and aesthetically pleasing space:
     </p>
     <ul>
-     <li>
-      <span class="font-moontime text-3xl">Space planning</span> : Determining the layout of
-      furniture and decor to optimize the use of space;
+     <li class="text-white">
+      <span class="font-moontime text-3xl text-white">Space planning</span> : Determining the layout
+      of furniture and decor to optimize the use of space;
      </li>
-     <li>
-      <span class="font-moontime text-3xl">Color consultation</span> : Selecting paint colors,
-      fabrics and finishes to create a cohesive look;
+     <li class="text-white">
+      <span class="font-moontime text-3xl text-white">Color consultation</span> : Selecting paint
+      colors, fabrics and finishes to create a cohesive look;
      </li>
-     <li>
-      <span class="font-moontime text-3xl">Furniture selection</span>
+     <li class="text-white">
+      <span class="font-moontime text-3xl text-white">Furniture selection</span>
        : Choosing furniture pieces that fit the style and function of the space;
      </li>
-     <li>
-      <span class="font-moontime text-3xl">Lighting design</span>
+     <li class="text-white">
+      <span class="font-moontime text-3xl text-white">Lighting design</span>
        : Planning the placement of lighting fixtures to enhance the ambiance of the room;
      </li>
-     <li>
-      <span class="font-moontime text-3xl">Custom design</span>
+     <li class="text-white">
+      <span class="font-moontime text-3xl text-white">Custom design</span>
        : Creating custom pieces such as built-in shelving, cabinetry or furniture;
      </li>
-     <li>
-      <span class="font-moontime text-3xl">Project management</span>
+     <li class="text-white">
+      <span class="font-moontime text-3xl text-white">Project management</span>
        : Overseeing the implementation of the design plan, coordinating with contractors and
       vendors; and
      </li>
-     <li>
-      <span class="font-moontime text-3xl">Styling and accessorizing</span>
+     <li class="text-white">
+      <span class="font-moontime text-3xl text-white">Styling and accessorizing</span>
        : Adding finishing touches such as artwork, rugs and decor items to complete the look.
      </li>
     </ul>
