--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -13,19 +13,25 @@
   <div class="my-12 flex flex-col gap-6 px-6 lg:my-28">
    <!-- Mission description -->
 
-   <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+   <p class="text-xl text-primary-950/70 dark:text-white sm:text-2xl">
     My name is Mia Lambrechts and reFlair Ideas and Interiors is my business and passion.
    </p>
-   <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+   <p class="text-xl text-primary-950/70 dark:text-white sm:text-2xl">
     I have been blessed and fortunate to turn my passion for beautiful interiors into a profession,
     as I believe that being able to find serenity and comfort in one's home is a crucial factor in
     quality of life.
    </p>
-   <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+   <p class="text-xl text-primary-950/70 dark:text-white sm:text-2xl">
     As I turned 40, it felt like a good time to face a new challenge: I joined Hanlie Claasen
     Interiors in 2017 - after which ReFlair Interiors was born in 2020. Since then I have met
-    wonderful people, been inspired by the interior industry’s amazing offerings, learnt a lot and
+    wonderful people, been inspired by the interior industry's amazing offerings, learnt a lot and
     worked on a variety of projects: each one stimulating and exciting in its own way.
+   </p>
+   <p class="text-xl text-primary-950/70 dark:text-white sm:text-2xl">
+    I see my purpose as listening to a client's ideas and then bringing to the table perspective and
+    context, as well as a holistic view, by applying sound design principles. True to its name, by
+    reFlair-ing, my aim is to offer guidance and services on the subject of flair - and I would like
+    to once again add flair to your home.
    </p>
   </div>
  </div>
