--- a/src/components/about/Values.astro
+++ b/src/components/about/Values.astro
@@ -28,20 +28,20 @@ const values = [
 <section class="py-16 sm:py-20">
  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
   <div class="flex flex-col gap-8 lg:gap-12">
-   <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Consultations</h2>
+   <h2 class="text-3xl font-medium tracking-tight text-white sm:text-4xl">Consultations</h2>
    <h3 class="text-xl font-light tracking-tight sm:text-2xl">
-    <span class="font-semibold"> Flair Injection consultations</span> provide practical information,
-    honest recommendations and loads of inspiration to make any interior seem fresh and updated
-    again - and the objectives are as follows:
+    <span class="font-semibold text-white"> Flair Injection consultations</span> provide practical
+    information, honest recommendations and loads of inspiration to make any interior seem fresh and
+    updated again - and the objectives are as follows:
    </h3>
    <div class="grid gap-8 lg:grid-cols-2">
     {
      values.map((value) => (
       <div class="flex flex-col gap-12 rounded-3xl bg-primary-500/10 px-6 py-8 dark:bg-primary-400/10">
-       <p class="text-md sm:text-lg">{value.ref}</p>
+       <p class="text-md text-white sm:text-lg">{value.ref}</p>
        <div class="flex flex-col gap-4">
-        <h3 class="font-moontime text-xl sm:text-2xl">{value.name}</h3>
-        <p class="text-lg text-primary-950/70 dark:text-primary-200/70 sm:text-xl">
+        <h3 class="font-moontime text-xl text-white sm:text-2xl">{value.name}</h3>
+        <p class="text-lg text-primary-950/70 text-white dark:text-white sm:text-xl">
          {value.description}
         </p>
        </div>
