--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -2,7 +2,7 @@
  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
   <div class="grid gap-12 sm:gap-28 lg:grid-cols-2">
    <div class="flex flex-col items-center justify-center gap-8 p-8 sm:gap-10 lg:col-span-1">
-    <p class="text-xl text-primary-950/70 dark:text-primary-200/70 sm:text-2xl">
+    <p class="text-xl text-primary-950/70 dark:text-white sm:text-2xl">
      Thanks to social media and the internet, I believe most of us are influenced and educated to
      such an extent that we are able to make well-informed choices when it comes to furnishing our
      spaces. Therefore the question, why consult an interior designer?
@@ -24,7 +24,10 @@
     </a>
    </div>
    <div class="wrap flex lg:col-span-1">
-    <img src="/assets/lappies.webp" alt="flour theme fabrics stacked in a pile" />
+    <img
+     src="/assets/lappies.webp"
+     alt="flour theme fabrics stacked in a pile"
+    />
    </div>
   </div>
  </div>
