--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -42,14 +42,21 @@ const projects = [
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout description="A display of some of the projects I've worked on" title="Projects · Reflair">
+<Layout
+ description="A display of some of the projects I've worked on"
+ title="Projects · Reflair"
+>
  <section class="py-12 sm:py-12">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-   <h2 class="mb-8 text-3xl font-medium tracking-tight sm:text-4xl">Projects</h2>
+   <h2 class="mb-8 text-3xl font-medium tracking-tight text-white sm:text-4xl">Projects</h2>
    <div class="flex flex-col">
     {
      projects.map((project) => (
-      <img src={project.image} alt={project.description} class="my-6 rounded-3xl shadow-md " />
+      <img
+       src={project.image}
+       alt={project.description}
+       class="my-6 rounded-3xl shadow-md "
+      />
      ))
     }
    </div>
