Adjusted text with span bold italic in about session

--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -30,8 +30,10 @@
    <p class="text-xl text-primary-950/70 dark:text-white sm:text-2xl">
     I see my purpose as listening to a client's ideas and then bringing to the table perspective and
     context, as well as a holistic view, by applying sound design principles. True to its name, by
-    reFlair-ing, my aim is to offer guidance and services on the subject of flair - and I would like
-    to once again add flair to your home.
+    reFlair-ing, my aim is to offer guidance and services <span class="font-bold italic">
+     on the subject of</span
+    > flair - and I would like to <span class="font-bold italic"> once again</span> add flair to
+    your home.
    </p>
   </div>
  </div>
